--- a/esmvaltool/recipes/recipe_seaice.yml
+++ b/esmvaltool/recipes/recipe_seaice.yml
@@ -54,6 +54,28 @@ diagnostics:
         EMs_in_lg: False       # True: create legend label for each individual ensemble member
         fill_pole_hole: True   # True: Fill polar hole in data with sic = 1.
 
+  seaice_tsline_SH:
+    description: Timeseries of September Antarctic sea ice area and extent
+    variables: 
+      sic:
+        preprocessor: pp_noop
+        mip: OImon
+        field: T2Ms 
+        fx_files: [areacello]
+        additional_datasets:
+          - {dataset: HadISST,   project: OBS,  type: reanaly,  version: 20130524,  start_year: 1960,  end_year: 2005,  tier: 2}
+    scripts:
+      tsline:
+        script: seaice/seaice_tsline.ncl
+        region: "Antarctic"    # "Arctic" or "Antarctic"; entire hemisphere will be evaluated
+        month: "9"             # A = annual mean, 3 = March, 9 = September
+        styleset: "CMIP5"      # "CMIP5", "DEFAULT"
+        range_option: 0        # 0 = use each dataset's whole time range as specified in namelist
+                               # 1 = use only intersection of all time ranges 
+        multi_model_mean: True # Plot multi-model mean & std dev
+        EMs_in_lg: False       # True: create legend label for each individual ensemble member
+        fill_pole_hole: False  # True: Fill polar hole in data with sic = 1.
+
 
 datasets:
 
