--- a/esmvaltool/recipes/recipe_consecdrydays.yml
+++ b/esmvaltool/recipes/recipe_consecdrydays.yml
@@ -6,19 +6,18 @@ documentation:
   references: ['acknow_project']
 
 datasets:
-   - {dataset: bcc-csm1-1-m,  project: CMIP5,  mip: day,  exp: historical,  ensemble: r1i1p1,  start_year: 2001,  end_year: 2002}
+  - {dataset: bcc-csm1-1-m, project: CMIP5, mip: day, exp: historical, ensemble: r1i1p1, start_year: 2001, end_year: 2002}
 
 diagnostics:
 
-   diagnostic1:
-      description: Calculating number of dry days.
-      variables:
-         pr:
-            field: T2Ms
-      scripts:
-         script1:  #conseq dry days
-            script: droughtindex/diag_cdd.py
-            dryindex: 'cdd'
-            plim: 1
-            frlim: 5
-        
+  dry_days:
+    description: Calculating number of dry days.
+    variables:
+      pr:
+        field: T2Ms
+    scripts:
+      consecutive_dry_days:
+        script: droughtindex/diag_cdd.py
+        dryindex: 'cdd'
+        plim: 1
+        frlim: 5
