--- a/esmvaltool/recipes/recipe_smpi.yml
+++ b/esmvaltool/recipes/recipe_smpi.yml
@@ -11,6 +11,7 @@ documentation:
     Temperature, Sea Ice Fraction and sea surface salinity.
 
   authors:
+    - hass_bg
     - gier_be
     - righ_ma
     - eyri_ve
