--- a/esmvaltool/recipes/recipe_clouds_bias.yml
+++ b/esmvaltool/recipes/recipe_clouds_bias.yml
@@ -130,6 +130,10 @@ diagnostics:
 
   clouds_bias_tas:
     description: IPCC AR5 Ch. 9, Fig. 9.2 (near-surface temperature)
+    themes:
+      - clouds
+    realms:
+      - atmos
     variables:
       tas:
         preprocessor: clim
@@ -157,6 +161,10 @@ diagnostics:
 
   clouds_bias_pr:
     description: IPCC AR5 Ch. 9, Fig. 9.4 (precipitation)
+    themes:
+      - clouds
+    realms:
+      - atmos
     variables:
       pr:
         preprocessor: clim
@@ -180,6 +188,10 @@ diagnostics:
   clouds_bias_clt:
     description: multi-model mean bias of annual mean compared with a
                  reference dataset (observations).
+    themes:
+      - clouds
+    realms:
+      - atmos
     variables:
       clt:
         preprocessor: clim
