--- a/esmvaltool/recipes/recipe_capacity_factor_wp7.yml
+++ b/esmvaltool/recipes/recipe_capacity_factor_wp7.yml
@@ -1,8 +1,6 @@
-
-#
-# References:
-# 'http://secif.ipsl.fr/images/SECIF/documents/Communication/fiche_invulnerable/RC_indicateur_EN.pdf'
-###############################################################################
+# ESMValTool
+# recipe_capacity_factor_wp7.yml
+---
 documentation:
   description: |
      Diurnal Temperature Variation (DTR) Indicator and Wind Capacity Factor
@@ -23,6 +21,7 @@ datasets:
   - {dataset: IPSL-CM5A-MR,  type: exp, project: CMIP5,  mip: day,  exp: historical,  ensemble: r1i1p1,  start_year: 1980,  end_year: 2005}
   #- {dataset: MPI-ESM-MR, type: exp, project: CMIP5, mip: day, exp: rcp26, ensemble: r1i1p1, start_year: 2021, end_year: 2025}
   #- {dataset: MPI-ESM-MR, type: exp, project: CMIP5, mip: day, exp: rcp45, ensemble: r1i1p1, start_year: 2031, end_year: 2035}
+
 preprocessors:
   preproc:
     regrid:
@@ -48,11 +47,10 @@ diagnostics:
         field: T2M
     scripts:
       main:
-        script: magic_bsc/capacity_factor.r #(in diag_scripts)
+        script: magic_bsc/capacity_factor.r
         power_curves:
           - PowerCurves/Enercon_E70_2.3MW.txt
           - PowerCurves/Gamesa_G80_2.0MW.txt
           - PowerCurves/Gamesa_G87_2.0MW.txt
           - PowerCurves/Vestas_V100_2.0MW.txt
           - PowerCurves/Vestas_V110_2.0MW.txt
-
